moving the files around a bit

--- a/copy-config.json
+++ b/copy-config.json
@@ -11,8 +11,12 @@
     "/backend/frontend",
     "/index.html",
     "/manifest.json",
-    "custom",
     "go.sum"
+  ],
+  "temp": [
+    "_test.go",
+    "custom",
+    "go.mod"
   ]
 }
 
